--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -11,7 +11,7 @@
   color: var(--white);
   background-color: var(--primary);
   color: #ccc;
-  border: 1px solid #444;
+  border: 1px solid var(--border-header);
   line-height: 1.2rem;
   font-size: 1.2rem;
   font-weight: 500;
