--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -42,6 +42,7 @@ body {
 
 a[href] {
   text-decoration: none;
+  display: block;
 }
 button {
   background-color: transparent;
@@ -52,4 +53,15 @@ input {
 }
 ul > li {
   list-style: none;
+}
+.grid__row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -12px;
+  margin-right: -12px;
+}
+.grid__column-4 {
+  width: 25%;
+  padding-left: 12px;
+  padding-right: 12px;
 }
