--- a/src/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -4,8 +4,8 @@
   align-items: center;
 }
 .container {
+  margin: 80px 0 12px 0;
   width: var(--defaultWidth);
-  display: flex;
 }
 .content {
   flex: 1;
